--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: my_db
+      POSTGRES_DB: bookshop
     ports:
       - "5432:5432"
   pgadmin:
