--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       POSTGRES_DB: bookshop
     ports:
       - "5432:5432"
+    networks:
+      - bookshop_net
+
   pgadmin:
     container_name: pgadmin4_container
     image: dpage/pgadmin4
@@ -18,3 +21,8 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "5050:80"
+    networks:
+      - bookshop_net
+
+networks:
+  bookshop_net:
